<resources>
    <string name="exchange_size">大小</string>
    <string name="exchange_action_open">打开</string>
    <string name="exchange_action_browse">浏览</string>
    <string name="exchange_action_download">下载</string>
    <string name="exchange_network_break_alert">请确定设备成功联接网络</string>
    <string name="exchange_more">更多精彩推荐</string>
    <string name="exchange_back_to_top">回到顶部</string>
    <string name="exchange_dowloadOrNot">是否下载推荐应用？</string>
    <string name="tab_item_weather">天气</string>
    <string name="tab_item_trend">趋势</string>
    <string name="tab_item_index">生活</string>
    <string name="tab_item_tools">工具</string>
    <string name="tab_item_setting">设置</string>
    <string name="menu_item_skin">皮肤管理</string>
    <string name="menu_item_huangli">黄历查询</string>
    <string name="menu_item_share">分享天气</string>
    <string name="menu_item_test">测试</string>
    <string name="menu_item_del_all_city">删除所有城市</string>
    <string name="app_name">墨迹天气</string>
    <string name="widget_title_big">墨迹天气插件(4x2)</string>
    <string name="widget_title_mid">墨迹天气插件(4x1)</string>
    <string name="auto_share">自动或手动分享到微博及联系人</string>
    <string name="setting_btn">设置</string>
    <string name="ok_btn">确定</string>
    <string name="cancel_btn">取消</string>
    <string name="apply_btn">应用</string>
    <string name="edit_btn">编辑</string>
    <string name="delete_btn">删除</string>
    <string name="setup_btn">安装</string>
    <string name="download_btn">下载</string>
    <string name="update_btn">更新</string>
    <string name="laterdo_btn">以后再说</string>
    <string name="uninstall_btn">立即卸载</string>
    <string name="install_btn">立即下载</string>
    <string name="do_not_show_again">不再显示</string>
    <string name="just_this_once">始终提示</string>
    <string name="gave_score">给我们评分</string>
    <string name="go_market">去市场下载</string>
    <string name="exit">退出</string>
    <string name="installed_skin">已安装</string>
    <string name="no_market">您尚未安装Market软件。</string>
    <string name="tomorrow">明天：</string>
    <string name="download_method_selection">请选择下载方式</string>
    <string name="immediately_check_skin">更换皮肤</string>
    <string name="continue_download_skin">返回列表</string>
    <string name="contacts_no_name">无姓名</string>
    <string name="retry_btn">重试</string>
    <string name="first_run_dlg_title">墨迹天气提示信息</string>
    <string name="first_run_dlg_msg">这是您第一次运行墨迹天气软件，正在根据您的手机型号下载合适的数据设置，第一次运行需要连接网络，请稍后......</string>
    <string name="first_run_dlg_btn1_text">取消连接网络</string>
    <string name="msg_network_register_error">抱歉，由于网络连接问题，无法为您更新天气数据，请检查您的网络连接或稍后再试。</string>
    <string name="msg_network_register_success">恭喜您，初始化成功，请您点击城市索引界面的“＋”号来添加一个您需要关注天气的城市。</string>
    <string name="msg_city_none_select">您还没有选择城市，请您选择一个或多个您关心的城市。</string>
    <string name="msg_city_same_city">抱歉，您不能添加一个城市两次。</string>
    <string name="msg_city_no_city_to_delete">已经没有城市可以删除</string>
    <string name="msg_city_cannot_delete_city_in_updating">更新中不能删除城市！</string>
    <string name="msg_city_deleting_share_city">删除的城市为分享城市,请进入分享设置界面重新选择分享城市！</string>
    <string name="msg_updating_canceled">更新已经被您取消</string>
    <string name="msg_updating_newly_added_city">自动尝试更新新添加的城市的天气...</string>
    <string name="msg_first_city_tips">已经是第一个城市!</string>
    <string name="msg_last_city_tips">已经是最后一个城市!</string>
    <string name="msg_isexit">再按一下返回键退出程序！</string>
    <string name="msg_weather_data_no_found">抱歉，暂无此城市天气数据。请您稍后再试！</string>
    <string name="msg_city_same_city_auto_locate">抱歉，自动定位城市只能够选择一个，请您在管理界面留意 “当前位置” 的更新结果。</string>
    <string name="dialog_title_select_add_remove_cancel">请选择操作类型</string>
    <string name="msg_disable_move">正在更新数据，请您稍后再切换画面。点击标题栏上的“Ｘ”形状的可取消更新。</string>
    <string name="dialog_title_about">墨迹天气</string>
    <string name="dialog_no_cityinfo">抱歉暂时无此地区的天气数据，请选择附近的地区。</string>
    <string name="msg_about_description">墨迹风云团队致力于为国内用户打造最优秀的手机软件。</string>
    <string name="msg_about_moijiurl">墨迹官网:www.mojichina.com</string>
    <string name="msg_version_type">内测版</string>
    <string name="msg_not_open">抱歉，本版本暂未开放本功能，若您需要此功能请随时留意我们最新的发布信息，谢谢。</string>
    <string name="screen1_title">城 市 管 理</string>
    <string name="screen2_title">墨迹天气</string>
    <string name="screen3_title">趋势图</string>
    <string name="screen3_title_temp">温度趋势图</string>
    <string name="screen3_wind_title">风力趋势图</string>
    <string name="current_location">当前位置</string>
    <string name="weather_update">同步</string>
    <string name="weather_waiting_update">待同步</string>
    <string name="weather_updating">同步中...</string>
    <string name="system_return_message_0">成功</string>
    <string name="system_return_message_2">"温馨提示：为了您更好的使用墨迹天气软件，需要更新您当前安装的版本，请去官方论坛升级到最新版本。

网址：www.mojichina.com
"</string>
    <string name="system_return_message_5">"温馨提示：墨迹天气已经有新的版本,建议您去更新。

网址：www.mojichina.com
"</string>
    <string name="system_return_message_8">"对不起，您还没有申请到测试资格，请您去官方论坛申请。

网址：www.mojichina.com
"</string>
    <string name="system_return_message_9">很抱歉，在城市数据库中未查找到您的所在位置对应的城市，请您暂时手动选择您所在的当前城市，我们会尽快完善城市位置信息的对应。</string>
    <string name="msg_check_version_no_new">"您当前是最新版本,无需更新,欢迎去论坛看看. 

网址：www.mojichina.com
"</string>
    <string name="msg_check_version_network_error">"因为手机网络问题,暂时无法连接,您可以去论坛反映问题. 

网址：www.mojichina.com
"</string>
    <string name="dialog_title_select_sub_menu">请选择以下设定:</string>
    <string name="dialog_title_auto_update">桌面自动更新设定:</string>
    <string name="msg_no_weather_data">抱歉,当前城市需要更新天气之后才能分享给您的好友.</string>
    <string name="help_widget">"
插件设定说明 
1.4x2大小插件拥有五个热区，分别是小时，分钟，城市名（切换城市），天气图标（进入墨迹），日期（更新天气），其中小时和分钟部分可自定义，请在主程序‘桌面设置-&amp;gt;自定义快捷按钮设定’菜单设置。
 
2.4x1大小插件拥有两个热区，分别是左半部分和右半部分，右半部分可自定义。
 
3.九宫格快捷方式默认不开启，可以在‘桌面设置-&amp;gt;自定义快捷按钮设定’菜单设置开启九宫格快捷方式。
"</string>
    <string name="msg_no_widget_use">抱歉,墨迹天气的插件放在桌面上之后才能使该操作生效,请返回到桌面加载墨迹天气插件.</string>
    <string name="msg_no_widget_skin">"抱歉，暂时没有支持您
设备分辨率的皮肤。"</string>
    <string name="msg_setwidget">"长按桌面空白处 -&amp;gt; 选择桌面小部件 -&amp;gt; 选择墨迹天气4×1或4×2。 
"</string>
    <string name="msg_timedead">"绝大多数桌面插件显示、时间停止等异常问题可以通过移除桌面出问题的插件（拖到垃圾桶），再重新添加墨迹天气插件的方式解决。还不行？请切换回默认皮肤，再重新切换成你喜欢的皮肤，基本能解决问题。
"</string>
    <string name="msg_install_skin">"第一步，拷贝mja格式的皮肤文件到SD卡下面的moji目录下，若没有这个目录，请手工建立。之后请重新挂载sd卡或者拔掉数据线。
 第二步，进入设置页面，选择“桌面插件”，选择“从SD卡安装皮肤”，然后安装你想要的皮肤。
 第三步，皮肤安装完毕，退出安装界面，返回到主界面进入已安装皮肤列表，点击进入你喜欢的皮肤详情界面，按下“使用”按钮，就好了。 
"</string>
    <string name="msg_duty">因为更改签名有效期，新版墨迹天气不再支持覆盖安装1.15及其之前的较旧版本，最新的1.16版本或更高版本不受影响，请单击“打开旧版卸载”按钮卸载并存的较旧版本。本提示在您卸载旧版本之后不会再次出现。</string>
    <string name="COAuthShareUsername">用户名</string>
    <string name="COAuthSharePassword">密码</string>
    <string name="COAuthShare_CHANNEL_SINA">新浪微博</string>
    <string name="COAuthShare_CHANNEL_TENCENT">腾讯微博</string>
    <string name="COAuthShare_CHANNEL_RENREN">人人网社区</string>
    <string name="COAuthShare_CHANNEL_KAIXIN">开心网社区</string>
    <string name="add_contacts">添加联系人</string>
    <string name="no_contact">通讯录中无联系人</string>
    <string name="no_contact_notice">你的手机通讯录中没有联系人，请先添加联系人！</string>
    <string name="contact_to_share">您设定分享的联系人为：</string>
    <string name="share_notice">我们会按您设定的时间每天转发天气信息，所产生的短信费用由您的运营商收取。</string>
    <string name="no_contact_selected_notice">您当前没有选择可用的联系人，请选择！</string>
    <string name="share_type_text_summary">分享类型为:文字</string>
    <string name="share_type_pic_summary">"分享类型为:文字和图片
注:图片最大在35KB左右"</string>
    <string name="share_weather_info">天气信息预览</string>
    <string name="share_setting_title">自动分享设置</string>
    <string name="share_auto_share">自动分享</string>
    <string name="share_on_summary">已开启（仅自动在每天第一次更新时发送，没有设置联系人或微博则不发送）</string>
    <string name="share_forecast_days">预报天数:</string>
    <string name="share_forecast_2days">预报天数:2天</string>
    <string name="share_forecast_3days">预报天数:3天</string>
    <string name="share_type">自动分享类型</string>
    <string name="share_city">自动分享城市</string>
    <string name="share_weibo_contact">微博和联系人(列表项可长按或点击)</string>
    <string name="share_add_weibo">+ 添加新浪微博</string>
    <string name="share_add_kaixin">+ 添加开心网账号</string>
    <string name="share_add_contact">+ 添加联系人(短信分享)</string>
    <string name="share_days_dialog_title">选择预报天数</string>
    <string name="share_type_dialog_title">选择分享类型</string>
    <string name="share_city_dialog_title">选择分享城市</string>
    <string name="share_weibo_dialog_title">选择分享微博</string>
    <string name="share_add_city_dialog_title">请添加城市</string>
    <string name="share_current_weather_dialog_title">当前天气</string>
    <string name="share_header_title">请选择操作类型</string>
    <string name="share_delete_weibo">删除此分享账户</string>
    <string name="share_delete_contact">删除此短信分享联系人</string>
    <string name="share_delete_note">删除提示</string>
    <string name="share_delete_weibo_message">确定删除此分享账户?</string>
    <string name="share_delete_contact_message">确定删除此短信分享联系人?</string>
    <string name="share_city_default">未选择分享城市，默认城市为:</string>
    <string name="share_city_current">当前城市为:</string>
    <string name="share_city_select">您选择的城市为:</string>
    <string name="share_city_null">分享城市不能为空，请返回城市管理界面添加城市！</string>
    <string name="share_positive_button">确定</string>
    <string name="share_neutral_button">取消</string>
    <string name="share_select">选择</string>
    <string name="share_day">天</string>
    <string name="save">保存</string>
    <string name="auto_update_set_ok">开启自动更新</string>
    <string name="auto_update_notice">注:无网络时本程序不会自动联网</string>
    <string name="auto_update_interval_time_setting">更新的间隔时间</string>
    <string name="auto_update_default_time">4小时</string>
    <string name="auto_update_time_setting">每日自动更新时间段设定</string>
    <string name="auto_update_start_time_setting">开始时间点</string>
    <string name="auto_update_end_time_setting">结束时间点</string>
    <string name="auto_update_remind">提醒</string>
    <string name="auto_update_remind_title">提醒您注意</string>
    <string name="auto_update_remind_contents">本软件会自动根据网络状况(高峰时间拥挤、无法连接等)适当调整更新时间，以上并不代表绝对精确时间。</string>
    <string name="help_title_addWidget">1.如何在桌面上放置墨迹天气插件</string>
    <string name="help_title_widget_time">2.桌面插件时间不动</string>
    <string name="help_title_installskin">3.皮肤安装方法</string>
    <string name="dialog_widget_description">4.墨迹天气插件说明</string>
    <string name="voice_close_already">已关闭</string>
    <string name="voice_data_upate_title">更新语音数据包</string>
    <string name="voice_data_upate_summary">更新最新最完整的数据包，体验更好的语音播报服务。</string>
    <string name="skin_comment_hint">请输入评论内容...</string>
    <string name="skin_no_grade">您没有评分...</string>
    <string name="skin_selector_newest">最新皮肤</string>
    <string name="skin_selector_hottest">人气皮肤</string>
    <string name="skin_selector_installed">已安装皮肤</string>
    <string name="Daily_Detail_Sunrise">日出时间</string>
    <string name="Daily_Detail_Sunset">日落时间</string>
    <string name="Daily_Detail_Sunset_Sunrise">日出日落</string>
    <string name="advanced_auto_voice">自动播报</string>
    <string name="advanced_voice_time">设置播报时间</string>
    <string name="advanced_voice_working_days">仅工作日播报</string>
    <string name="share_personal_regards">个性问候语</string>
    <string name="share_regards_dialog_title">设置问候语</string>
    <string name="summary_personal_regards">在天气信息前加上您自定义的问候语，为您传达诚挚的问候。当前未设置个性问候语。</string>
    <string name="share_content_setting">文字内容设置</string>
    <string name="share_manaul_setting">手动分享设置</string>
    <string name="share_manual_type">手动分享类型</string>
    <string name="setting_voice_auto_setting">自动播报设置</string>
    <string name="add_city_edit_text">搜索全球城市(中文/拼音)</string>
    <string name="add_city_no_city">没有你要查询的地区天气</string>
    <string name="add_city">添加城市</string>
    <string name="add_city_hot">热门城市</string>
    <string name="all_date">全部</string>
    <string name="birthday_date">生日</string>
    <string name="festival_date">节日</string>
    <string name="repayment_date">还款日</string>
    <string name="commemorate_date">纪念日</string>
    <string name="days_matter">倒数日</string>
    <string name="matter_list_emptyview">点击“+”号添加倒数日</string>
</resources>