<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/share_setting_title">
        <ListPreference android:entries="@array/share_days_entries" android:title="@string/share_forecast_days" android:key="share_days_list_preference" android:summary="@string/share_forecast_3days" android:defaultValue="3" android:dialogTitle="@string/share_days_dialog_title" android:entryValues="@array/share_days_entryValues" />
        <ListPreference android:entries="@array/share_type_entries" android:title="@string/share_type" android:key="share_type_list_preference" android:summary="@string/share_type_pic_summary" android:defaultValue="1" android:dialogTitle="@string/share_type_dialog_title" android:entryValues="@array/share_type_entryValues" />
        <ListPreference android:title="@string/share_city" android:key="share_city_list_preference" android:dialogTitle="@string/share_city_dialog_title" />
        <Preference android:title="@string/share_personal_regards" android:key="share_personal_regards" android:summary="@string/summary_personal_regards" android:dialogTitle="@string/share_regards_dialog_title" />
    </PreferenceCategory>
</PreferenceScreen>
