<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RatingBar android:id="@id/rb_dialog_rating" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="16.0dip" android:id="@id/tv_dialog_rating_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skin_no_grade" />
        <EditText android:gravity="top" android:id="@id/et_dialog_comment" android:layout_width="fill_parent" android:layout_height="100.0dip" android:hint="@string/skin_comment_hint" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/but_comment_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok_btn" android:layout_weight="1.0" />
        <Button android:id="@id/but_comment_cancle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_btn" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
