<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="4.0dip" android:layout_weight="5.0">
            <ImageView android:paddingTop="2.0dip" android:layout_width="@dimen/daily_detail_icon_size" android:layout_height="@dimen/daily_detail_icon_size" android:src="@drawable/everydaydetail_suntime" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="4.0dip" android:layout_weight="2.0">
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Daily_Detail_Sunset_Sunrise" />
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textColor="@color/daily_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Daily_Detail_Sunrise" />
                <TextView android:textColor="@color/daily_detail" android:id="@id/TextView_SunRise" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textColor="@color/daily_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Daily_Detail_Sunset" />
                <TextView android:textColor="@color/daily_detail" android:id="@id/TextView_SunSet" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
